learning how to use github with visual studio code

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 </section>
 <!-- Section: Testimonials v.1 -->
 
-
+<!--I am checking version control-->
 <section id="gallery">
   <div class="scrolled-image gallery-bg">
       <h2 class="card-title gallery-title">Our Friends</h2>
