--- a/index.html
+++ b/index.html
@@ -590,6 +590,9 @@
 <!-- Section: Testimonials v.1 -->
 
 <!--I am checking version control-->
+<!--This is just-->
+<!-- My trying stuff-->
+<!--For version control-->
 <section id="gallery">
   <div class="scrolled-image gallery-bg">
       <h2 class="card-title gallery-title">Our Friends</h2>
