--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<!-- Site Title -->
     <title>Happy Tales Pet Care</title>
-	<!-- These are the links to custome fonts (Lato and Signika,
+	<!-- These are the links to custome fonts (Signika, Dancing Script, and Courgette),
 		 Bootstrap CSS, Font Awesome Icons, and custom css in that order. -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Signika|Dancing+Script|Courgette" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
