Added Our Family section to the About Us page

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -9,7 +9,7 @@
     <!-- Site Title-->
     <title>About Us</title> 
 
-    <!-- These are the links to custome fonts (Signika, Dancing Script, and Courgette),
+    <!-- These are the links to custom fonts (Signika, Dancing Script, and Courgette),
 		 Bootstrap CSS, Font Awesome Icons, and custom css in that order. -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Signika|Dancing+Script|Courgette" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,9 @@
                 <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
             </ul>
     </nav>
+    <!-- END OF Navbar-->
 
+    <!--Hero image / parallax-->
     <div id="introParallax" class="container-fluid">
         <div class="row">
             <div class="intro-parallax-img">
@@ -82,7 +84,9 @@
             </div>
         </div>
     </div>
+    <!-- END OF Hero image / parallax-->
 
+    <!--Mission Statement-->
     <div id="missionStatement" class="container-fluid">
         <div class="row d-flex justify-content-center">
             <h2 class="card-title mission-statement">Mission Statement</h2> 
@@ -98,7 +102,9 @@
             </p>
         </div>
     </div>
+    <!--END OF Mission Statement-->
 
+    <!-- My Story card-->
     <div id="myStory" class="container-fluid" style="background-color: white; width:90%; margin-top: 90px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
         <div class="row d-flex">
             <img src="../img/jumbo-2.jpg"/>
@@ -117,7 +123,9 @@
             </p>
         </div>
     </div>
+    <!--END OF My Story card-->
 
+    <!--Location map-->
     <div id="location" class="container-fluid" style="margin-top:90px;">
         <div class="row d-flex justify-content-center">
             <h2 class="card-title" style="padding-bottom:10px;">Service Area</h2>
@@ -126,6 +134,68 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729511.5797693656!2d-84.80110645733522!3d44.419732795145535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8820f753dd309057%3A0xcab1dd7828e7fc6f!2sHappy+Tales+Pet+Care!5e0!3m2!1sen!2sus!4v1556474954205!5m2!1sen!2sus" width="360" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
+    <!--END OF Location map-->
+
+    <!--Meet Our Family-->
+    <div id="meetFamily" class="container-fluid" style="margin-top: 90px;">
+        <div class="row d-flex justify-content-center">
+            <h2 class="card-title" style="padding-bottom:0;">Meet <span class="accent">Our Family</span></h2>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-6" style="margin-top: 40px;">
+                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Mandie</h4>
+                <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
+                    Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
+                    fur babies happy; we're certain you want regret it! Click here to contact us today!    
+                </p>
+            </div>
+            <div class="col-sm-6" style="margin-top: 40px;">
+                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Maxwell</h4>
+                <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
+                    Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
+                    fur babies happy; we're certain you want regret it! Click here to contact us today!    
+                </p>
+            </div>
+            <div class="col-sm-6" style="margin-top: 40px;">
+                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Leo</h4>
+                <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
+                    Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
+                    fur babies happy; we're certain you want regret it! Click here to contact us today!    
+                </p>
+            </div>
+            <div class="col-sm-6" style="margin-top: 40px;">
+                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Violet</h4>
+                <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
+                    Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
+                    fur babies happy; we're certain you want regret it! Click here to contact us today!    
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Book Now-->
+    <div id="contact" class="container-fluid" style="margin-top: 90px;">
+        <div class="row d-flex justify-content-center">
+            <h2 class="card-title contact-title font-weight-light">Is your friend <span style="font-family: 'Courgette', cursive; color: var(--mainBlue);" class="font-weight-bold">ready to join</span> the Happy Tales Pack?</h2>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <p class="card-main-text contact-text" style="left:0; transform:translate(0,0);">
+            Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
+            fur babies happy; we're certain you want regret it! Click here to contact us today!
+            </p>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <button class="bttn-lg bttn-float bttn-contact" style="top:60px;">
+              <!--This is the text for our button. -->
+              Contact Us
+            </button>
+        </div>
+    </div>
+    <!-- END OF Book Now-->
 
     <!-- Footer -->
     <footer class="page-footer font-small blue pt-4">
@@ -176,7 +246,7 @@
         </div>
         <!-- Copyright -->
     </footer>
-    <!-- Footer -->
+    <!--END OF Footer -->
 
     <script src="../js/aboutus.js"></script>
 </body>
