--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -12,9 +12,10 @@
     <!-- These are the links to custom fonts (Signika, Dancing Script, and Courgette),
 		 Bootstrap CSS, Font Awesome Icons, and custom css in that order. -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Signika|Dancing+Script|Courgette" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../../Assets/Plugins/bootstrap-4.1.3-dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/aboutus.css" rel="stylesheet">
     <style>
         .intro-title {
             top:100px;
@@ -35,22 +36,22 @@
             color: var(--mainGray);
             font-size: 18px;
         }
+
+        /*This targets the non-active nav-links */
+        .navbar-light .nav-item .nav-link {
+	        font-family: "Signika", sans-serif;
+	        color:var(--mainPurple);
+        	transition: color 200ms linear;
+        	font-size: 22px;
+        }
     </style>
-    <!-- These are the javascript links to jquery, popper, TweenMax, Bootstrap, and Scroll Magic in that order. -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" async></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" async></script>
-    <script src="../js/TweenMax.min.js" async></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" async></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js" async></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js" async></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.velocity.min.js" async></script>
 </head>
 <body>
     <!--This is the Navbar -->
 	<!-- navbar defines this as a Bootstrap navbar, navbar-expand-lg
 		makes it collapse into a hamburger icon on smaller screens -->
 	<nav class="navbar fixed-top navbar-expand-lg bg-transparent navbar-light">
-        <a class="navbar-brand" href="#">Happy Tales</a>
+        <a class="navbar-brand" href="../index.html">Happy Tales</a>
         <!--This is the code for the toggler. data-target and aria-controls
             must be equal to the navigation list's div id. -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color:white;">
@@ -113,7 +114,7 @@
             <h2 class="card-title" style="padding-bottom:0;">My Story</h2>
         </div>
         <div class="row d-flex justify-content-center p-3">
-            <p style="font-size: 16px;">
+            <p>
                 Lorem ipsum dolor sit amet,
                 consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -130,7 +131,7 @@
         <div class="row d-flex justify-content-center">
             <h2 class="card-title" style="padding-bottom:10px;">Service Area</h2>
         </div>
-        <div class="row d-flex">
+        <div class="row d-flex justify-content-center">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729511.5797693656!2d-84.80110645733522!3d44.419732795145535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8820f753dd309057%3A0xcab1dd7828e7fc6f!2sHappy+Tales+Pet+Care!5e0!3m2!1sen!2sus!4v1556474954205!5m2!1sen!2sus" width="360" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
@@ -183,16 +184,18 @@
             <h2 class="card-title contact-title font-weight-light">Is your friend <span style="font-family: 'Courgette', cursive; color: var(--mainBlue);" class="font-weight-bold">ready to join</span> the Happy Tales Pack?</h2>
         </div>
         <div class="row d-flex justify-content-center">
-            <p class="card-main-text contact-text" style="left:0; transform:translate(0,0);">
+            <p class="contact-text" style="left:0; transform:translate(0,0); width: 90%; margin-top:60px;">
             Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
             fur babies happy; we're certain you want regret it! Click here to contact us today!
             </p>
         </div>
-        <div class="row d-flex justify-content-center">
-            <button class="bttn-lg bttn-float bttn-contact" style="top:60px;">
-              <!--This is the text for our button. -->
-              Contact Us
-            </button>
+        <div class="row d-flex">
+            <div class="col-12">
+                <button class="bttn-lg bttn-float bttn-contact" style="top:60px; margin: 0; left:50%; transform:translate(-50%, 0);">
+                <!--This is the text for our button. -->
+                Contact Us
+                </button>
+            </div>
         </div>
     </div>
     <!-- END OF Book Now-->
@@ -248,6 +251,14 @@
     </footer>
     <!--END OF Footer -->
 
+    <!-- These are the javascript links to jquery, popper, TweenMax, Bootstrap, and Scroll Magic in that order. -->
+    <script src="../../../../Assets/Plugins/jquery-3.4.0.js" async></script>
+    <script src="../../../../Assets/Plugins/popper.js/dist/popper.js" async></script>
+    <script src="../js/TweenMax.min.js" async></script>
+    <script src="../../../../Assets/Plugins/bootstrap-4.1.3-dist/js/bootstrap.js" async></script>
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js" async></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js" async></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.velocity.min.js" async></script> -->
     <script src="../js/aboutus.js"></script>
 </body>
 </html>
