Added more to services and rates page

--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -100,7 +100,7 @@
     </div>
     <!--END OF Intro Sentence-->
 
-    <div id="dropDownSection" class="container">
+    <div id="dropDownSection" class="container-fluid">
         <div class="dropdown" id="dogWalkingDropdown">
             <p class="dropdownTitle">
                 Dog Walking
@@ -112,6 +112,15 @@
                     consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua.
                 </p>
+
+                <div class="basicServiceCard firstServiceCard">
+                    <h3>Title</h3>
+                    <hr/>
+                    <p>Lorem ipsum dolor </p>
+                    <p>Lorem ipsum dolor </p>
+                    <p>Lorem ipsum dolor </p>
+                    <p>Lorem ipsum dolor </p>
+                </div>
             </div>
         </div>
         <div class="dropdown" id="petSittingDropdown">
