Centered Images in About Us Gallery

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -144,7 +144,7 @@
         </div>
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6" style="margin-top: 40px;">
-                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <img class="aboutUsGalleryImg" src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
                 <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Mandie</h4>
                 <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
                     Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
@@ -152,7 +152,7 @@
                 </p>
             </div>
             <div class="col-sm-6" style="margin-top: 40px;">
-                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <img class="aboutUsGalleryImg" src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
                 <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Maxwell</h4>
                 <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
                     Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
@@ -160,7 +160,7 @@
                 </p>
             </div>
             <div class="col-sm-6" style="margin-top: 40px;">
-                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <img class="aboutUsGalleryImg" src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
                 <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Leo</h4>
                 <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
                     Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
@@ -168,7 +168,7 @@
                 </p>
             </div>
             <div class="col-sm-6" style="margin-top: 40px;">
-                <img src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
+                <img class="aboutUsGalleryImg" src="../img/OurFamilyDemo.png" style="max-width: 100%;"/>
                 <h4 class="card-title" style="margin-bottom: 0; padding-bottom:0; padding-top: 40px;">Violet</h4>
                 <p class="card-main-text contact-text" style="left:0; transform:translate(0,0); width: 100%; padding: 0;">
                     Our happy clients come in many shapes, sizes and colors. Let Happy Tales make you and your
