Added Transparent Gray Background To About Us Page Title

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -18,7 +18,7 @@
     <link href="../css/aboutus.css" rel="stylesheet">
     <style>
         .intro-title {
-            top:100px;
+            top:15px;
             position: relative;
             font-size: 48px;
             font-family:'Signika', sans-serif;
@@ -81,7 +81,11 @@
     <div id="introParallax" class="container-fluid">
         <div class="row">
             <div class="intro-parallax-img">
-                <h2 class="card-title intro-title">About <section class="accent">Us</section></h2>
+                <div class="d-flex justify-content-center">                
+                    <div class="aboutUsCardTitleBackground">
+                        <h2 class="card-title intro-title">About <section class="accent">Us</section></h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
