Added Title Card Title Background to Services And Rates

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Site Title-->
-    <title>About Us</title> 
+    <title>Happy Tales | About Us</title> 
 
     <!-- These are the links to custom fonts (Signika, Dancing Script, and Courgette),
 		 Bootstrap CSS, Font Awesome Icons, and custom css in that order. -->
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="intro-parallax-img">
                 <div class="d-flex justify-content-center">                
-                    <div class="aboutUsCardTitleBackground">
+                    <div class="titleCardTitleBackground">
                         <h2 class="card-title intro-title">About <section class="accent">Us</section></h2>
                     </div>
                 </div>
