--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Is this a change?-->
 
 	<!-- Site Title -->
-    <title>Happy Tales Pet Care</title>
+    <title>Happy Tales | Home</title>
 	<!-- These are the links to custome fonts (Signika, Dancing Script, and Courgette),
 		 Bootstrap CSS, Font Awesome Icons, and custom css in that order. -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Signika|Dancing+Script|Courgette" rel="stylesheet">
