--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -18,7 +18,7 @@
         <link href="../css/servicesandrates.css" rel="stylesheet">
         <style>
             .intro-title {
-                top:100px;
+                top:15px;
                 position: relative;
                 font-size: 48px;
                 font-family:'Signika', sans-serif;
@@ -75,7 +75,11 @@
         <div id="introParallax" class="container-fluid">
             <div class="row">
                 <div class="intro-parallax-img">
-                    <h2 class="card-title intro-title">Services and <section class="accent">Rates</section></h2>
+                    <div class="d-flex justify-content-center">                
+                        <div class="titleCardTitleBackground">
+                            <h2 class="card-title intro-title">Services and <section class="accent">Rates</section></h2>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
