added links in the navbars for Home, About Us, and Services and Rates

--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -60,9 +60,9 @@
                     <!-- nav-item is required for each li in this list
                         and nav-link is required for each anchor link.
                         active styles this item as an active item. -->
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services & Rates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/html/aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/html/servicesandrates.html">Services & Rates</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Let's Meet</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Our Friends</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">F.A.Q.</a></li>
