--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -61,8 +61,8 @@
                         and nav-link is required for each anchor link.
                         active styles this item as an active item. -->
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/html/aboutus.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/html/servicesandrates.html">Services & Rates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="servicesandrates.html">Services & Rates</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Let's Meet</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Our Friends</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">F.A.Q.</a></li>
