--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -18,7 +18,6 @@
     <link href="../css/aboutus.css" rel="stylesheet">
     <style>
         .intro-title {
-            top:15px;
             position: relative;
             font-size: 48px;
             font-family:'Signika', sans-serif;
@@ -83,7 +82,7 @@
             <div class="intro-parallax-img">
                 <div class="d-flex justify-content-center">                
                     <div class="titleCardTitleBackground">
-                        <h2 class="card-title intro-title">About <section class="accent">Us</section></h2>
+                        <h2 class="card-title intro-title">About <span class="accent">Us</span></h2>
                     </div>
                 </div>
             </div>
