Fixed Font Colors

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -82,7 +82,7 @@
             <div class="intro-parallax-img">
                 <div class="d-flex justify-content-center">                
                     <div class="titleCardTitleBackground">
-                        <h2 class="card-title intro-title">About <span class="accent">Us</span></h2>
+                        <h2 class="card-title intro-title" style="color: white;">About <span class="accent">Us</span></h2>
                     </div>
                 </div>
             </div>
